force-app/main/default/objects/ZP_User_Role__c/fields/Accounting_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm_Id__c</fullName>
    <externalId>true</externalId>
    <label>Accounting Firm Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>