force-app/main/default/objects/ZP_User_Role__c/fields/Collaborator_Type__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collaborator Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>