force-app/main/default/objects/ZP_User_Role__c/fields/Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Company_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZP User Roles</relationshipLabel>
    <relationshipName>ZP_User_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>