force-app/main/default/objects/ZP_User_Role__c/fields/Contractor_Id__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Id__c</fullName>
    <label>Contractor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>