force-app/main/default/objects/ZP_User_Role__c/fields/Marketo_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Marketo Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>