force-app/main/default/objects/ZP_User_Role__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Optional, short description of the processing result when an error or warning is encountered.</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>