force-app/main/default/objects/ZP_User_Role__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>