force-app/main/default/objects/ZP_User_Role__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalId>true</externalId>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>