force-app/main/default/objects/ZP_User_Role__c/fields/User_Permissions__c.field-meta.xml
<CustomField>
    <fullName>User_Permissions__c</fullName>
    <description>Populated by EPD, JSON of permissions for each user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User Permissions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>